// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextInputFieldV2 > should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-3 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-5>.emotion-8 {
  color: #3f4250;
}

.emotion-5>.emotion-8::-webkit-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8::-moz-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8:-ms-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8::placeholder {
  color: #727683;
}

.emotion-5[data-success='true'] {
  border-color: #22674e;
}

.emotion-5[data-error='true'] {
  border-color: #b3144d;
}

.emotion-5[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-5[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-5[data-disabled='true']>.emotion-8 {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::placeholder {
  color: #b5b7bd;
}

.emotion-5:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-7[data-size='large'] {
  font-size: 1rem;
}

.emotion-7[data-size='small'] {
  padding-left: 0.5rem;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div
        class="emotion-0 emotion-1"
      >
        <label
          class="emotion-2 emotion-3 emotion-4"
          for="«r0»"
        >
          Test
        </label>
        <div>
          <div
            class="emotion-5 emotion-6"
            data-disabled="false"
            data-error="false"
            data-readonly="false"
            data-success="false"
          >
            <input
              aria-invalid="false"
              class="emotion-7 emotion-8"
              data-size="large"
              id="«r0»"
              name="test"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`TextInputFieldV2 > should render correctly generated 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-5 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.emotion-7 {
  color: #b3144d;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-9>.emotion-12 {
  color: #3f4250;
}

.emotion-9>.emotion-12::-webkit-input-placeholder {
  color: #727683;
}

.emotion-9>.emotion-12::-moz-placeholder {
  color: #727683;
}

.emotion-9>.emotion-12:-ms-input-placeholder {
  color: #727683;
}

.emotion-9>.emotion-12::placeholder {
  color: #727683;
}

.emotion-9[data-success='true'] {
  border-color: #22674e;
}

.emotion-9[data-error='true'] {
  border-color: #b3144d;
}

.emotion-9[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-9[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-9[data-disabled='true']>.emotion-12 {
  color: #b5b7bd;
}

.emotion-9[data-disabled='true']>.emotion-12::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-9[data-disabled='true']>.emotion-12::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-9[data-disabled='true']>.emotion-12:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-9[data-disabled='true']>.emotion-12::placeholder {
  color: #b5b7bd;
}

.emotion-9:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-11 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-11[data-size='large'] {
  font-size: 1rem;
}

.emotion-11[data-size='small'] {
  padding-left: 0.5rem;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 0 1rem;
}

.emotion-15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  height: 2rem;
  padding: 0 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.emotion-15:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-15:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-15:hover,
.emotion-15:active {
  background: #e9eaeb;
  color: #222638;
}

.emotion-17 {
  vertical-align: middle;
  fill: currentColor;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-17 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-19 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  height: 3rem;
  padding: 0 1rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: 0;
  text-case: none;
  background: #8c40ef;
  border: none;
  color: #ffffff;
}

.emotion-19:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-19:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-19:hover,
.emotion-19:active {
  background: #792dd4;
  color: #f9f9fa;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div
        class="emotion-0 emotion-1"
      >
        <div
          class="emotion-2 emotion-1"
        >
          <label
            class="emotion-4 emotion-5 emotion-6"
            for="«r3»"
          >
            Test
          </label>
          <span
            class="emotion-7 emotion-6"
          >
            *
          </span>
        </div>
        <div>
          <div
            class="emotion-9 emotion-10"
            data-disabled="false"
            data-error="false"
            data-readonly="false"
            data-success="false"
          >
            <input
              aria-invalid="false"
              class="emotion-11 emotion-12"
              data-size="large"
              id="«r3»"
              name="test"
              required=""
              type="text"
              value="This is an example"
            />
            <div
              class="emotion-13 emotion-14"
            >
              <button
                aria-label="clear value"
                class="emotion-15 emotion-16"
                type="button"
              >
                <svg
                  class="emotion-17 emotion-18"
                  viewBox="0 0 16 16"
                >
                  <path
                    d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <button
        class="emotion-19 emotion-20"
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;
